<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/superColor"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="30sp"
        android:padding="10dp"
        android:text="@string/name"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColorLink="#ffffff"
        android:inputType="textNoSuggestions|textVisiblePassword"
        android:id="@+id/addPersonEditText"
        android:hint="@string/name_of_person"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/add"
            android:layout_margin="5dp"
            android:id="@+id/addPersonOK"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary"
            android:id="@+id/addPersonCancle"
            android:textStyle="bold"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>